--- a/browser-startpage/fazzi/index.html
+++ b/browser-startpage/fazzi/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>~/startpage 💤</title>
+    <title>home</title>
     <meta name="darkreader-lock" />
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      href="https://raw.githubusercontent.com/NixOS/nixos-artwork/refs/heads/master/logo/nix-snowflake-white.svg"
+      href="C:\Users\jabui\Documents\browser-startpage\fazzi\tinder-color-svgrepo-com.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="../src/css/style.css" rel="stylesheet" />
@@ -22,34 +22,34 @@
       <div id="links">
 
         <div class="urls">
-          <div class="header">br</div>
+          <div class="header">-</div>
           <ul>
              <li><a href="https://youtube.com">youtube</a></li>
              <li><a href="https://weather.com/weather/today/l/4a3f3015952a3f573f80ec664d5f62408e2c686872dc9a881d74856b548c7b34">weather</a></li>
-            <li><a href="https://hydrahd.sh/">hydra</a></li>
+            <li><a href="https://search.brave.com/search?q=fmovies&source=desktop">hydra</a></li>
+          </ul>
+        </div>
+
+        <div class="urls">
+		          <div class="header">llm</div>
+          <ul>
+            <li><a href="https://chat.deepseek.com/">deepseek</a></li>
+            <li><a href="https://gemini.google.com/app">gemini</a>
+            <li><a href="https://chatgpt.com/">gpt</a></li>
+
           </ul>
         </div>
 
         <div class="urls">
            <div class="header">net</div><ul>
              <li><a href="https://github.com/gitsoncpu/my-linux">github</a></li>
-            <li><a href="https://wiki.archlinux.org/">ArchWiki</a></li>
-            <li><a href="https://dnscheck.tools">DNS test</a></li>
+            <li><a href="https://dnscheck.tools">dns</a></li>
             <li><a href="https://surfshark.com/dns-leak-test">ip shark</a></li>
-          </ul>
-        </div>
-
-        <div class="urls">
-          <div class="header">fin</div>
-          <ul>
-            <li><a href="https://www.tradingview.com/chart/EPqythsX/">super-charts</a></li>
-            <li><a href="https://finance.yahoo.com/">yahoo</a>
-            <li><a href="https://tradingeconomics.com/">tradonomics</a></li>
         </ul>
         </div>
 
         <div class="urls">
-              <div class="header">col</div>
+              <div class="header">-</div>
           <ul>
             <li><a href="https://wallhaven.cc/">wallhaven</a></li>
             <li><a href="https://jspaint.app">paint</a></li>
